# TDXploit

./: README.md
Section3/openssl/: README.md  single-stepping-attack.patch
Section3/openssl/kmod-coco-dec-mem/: Makefile  README.md  coco_dec_mem.c  example_userspace.c
Section3/openssl/linux-6.8/: .config  .config.old  Module.symvers  libcpupower.so.1
Section3/openssl/linux-6.8/certs/: signing_key.pem
Section3/openssl/tdx_step_userland/: .gitignore  Cargo.toml  build.env  build.rs  kvm_ioctls.h  setup-cpu-freq.sh  wrapper.h
Section3/openssl/tdx_step_userland/src/: freq_sneak.rs  graz_step.rs  ioctls.rs  lib.rs  memory.rs  types.rs  vm_setup_helpers.rs
Section3/singlestepping/: README.md
Section3/singlestepping/host/: int.c  int.h
Section4/aes/attack_aes/: Makefile  aes_spy_flush_flush.cpp  aes_spy_flush_flush_first_round_tdx.cpp  aes_spy_flush_flush_last_round_tdx.cpp
Section4/aes/modulefirstround/: int.c  int.h
Section4/aes/modulelastround/: int.c
Section4/ff_hist/: native_ff_hist.cpp
Section4/ff_hist/moduleffhist_guest/: int.c
Section4/ff_hist/moduleffhist_host/: int.c  int.h
Section4/totp/: decode.py
Section4/totp/attacker_td/: int.c
Section4/totp/otp_single_stepping_host/: int.c
Section5/systematic_evaluation/guest_receiver_ff_portsmash/: int.c
Section5/systematic_evaluation/guest_sender_portsmash/: int.c
Section5/systematic_evaluation/guest_sender_pp_ff_hkid/: int.c
Section5/systematic_evaluation/host_receiver/: int.c
kernel/linux-6.8/arch/x86/: Kconfig
kernel/linux-6.8/debian.intel/: changelog  control.stub.in  tracking-bug
(+105 files in other folders)
