[package]
name = "tdx_step_userland"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.65.1"
anyhow = "1.0.71"
dotenv = "0.15.0"
cc = "1.0"


[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.19", features = ["derive"] }
clap-num = "1.0.2"
env_logger = "0.10.0"
log = "0.4.19"
nix = "0.26.2"
pagemap = "0.1.0"
qapi = { version = "0.13.0", features = ["qmp"]}  
rand = "0.8.5"
x86 = "0.52.0"
plotly = { version = "0.8.4", features = ["kaleido"] }
ctrlc = "3.4.0"
csv = "1.2.2"
serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"] }
glob = "0.3.1"
indicatif = "0.17.8"
hex = "0.4.3"